ansible/roles/network_policies/files/traefik/04-allow-egress-backends.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-backends
  namespace: traefik
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              network-policy/traefik-egress: "true"
